--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </ul>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer decorated-zone">
     <h2 class="footer__title">focus</h2>
   </footer>
 </body>
